      <td style="text-align: left">Major</td>
      <td style="text-align: left">Precommit</td>
      <td style="text-align: left">Allen Wittenauer</td>
      <td style="text-align: left">Allen Wittenauer</td>
    </tr>
    <tr>
      <td style="text-align: left"><a href="https://issues.apache.org/jira/browse/YETUS-1022">YETUS-1022</a></td>
      <td style="text-align: left">Get commit sha from github PR json</td>
      <td style="text-align: left">Major</td>
      <td style="text-align: left">Precommit, website and documentation</td>
      <td style="text-align: left">Allen Wittenauer</td>
      <td style="text-align: left">Allen Wittenauer</td>
    </tr>
    <tr>
      <td style="text-align: left"><a href="https://issues.apache.org/jira/browse/YETUS-1024">YETUS-1024</a></td>
      <td style="text-align: left">github actions docs point to wrong repo, missing secrets</td>
      <td style="text-align: left">Trivial</td>
      <td style="text-align: left">website and documentation</td>
      <td style="text-align: left">Allen Wittenauer</td>
      <td style="text-align: left">Allen Wittenauer</td>
    </tr>
    <tr>
      <td style="text-align: left"><a href="https://issues.apache.org/jira/browse/YETUS-1025">YETUS-1025</a></td>
      <td style="text-align: left">bufcompat doesn't get linecomments</td>
      <td style="text-align: left">Major</td>
      <td style="text-align: left">Precommit</td>
      <td style="text-align: left">Allen Wittenauer</td>
      <td style="text-align: left">Allen Wittenauer</td>
    </tr>
    <tr>
      <td style="text-align: left"><a href="https://issues.apache.org/jira/browse/YETUS-1027">YETUS-1027</a></td>
      <td style="text-align: left">checkmake output is incorrect</td>
      <td style="text-align: left">Blocker</td>
      <td style="text-align: left">Precommit</td>
      <td style="text-align: left">Allen Wittenauer</td>
      <td style="text-align: left">Allen Wittenauer</td>
    </tr>
  </tbody>
</table>
