@@ -139,6 +139,7 @@
       </li>
     </ul>
   </li>
+  <li><a href="#related-utilities">Related Utilities</a></li>
   <li><a href="#more-information">More information</a></li>
 </ul>
 
@@ -277,6 +278,18 @@
   <li><a href="plugins/shellcheck">shellcheck</a></li>
   <li><a href="plugins/spotbugs">SpotBugs</a></li>
   <li><a href="plugins/yamllint">yamllint</a></li>
+</ul>
+
+<h1 id="related-utilities">Related Utilities</h1>
+
+<p><code>precommit</code> also comes with some utilities that are useful in various<br />
+capacities without needing to use the full <code>test-patch</code> runtime:</p>
+
+<ul>
+  <li><a href="docker-cleanup">docker-cleanup</a> - safe removal of Docker resources for multi-executor CI systems</li>
+  <li><a href="admin">jenkins-admin</a> - Jenkins&lt;-&gt;JIRA patch bridge</li>
+  <li><a href="qbt">qbt</a> - Quality Build Tool, for branch-specific testing</li>
+  <li><a href="smart-apply-patch">smart-apply-patch</a> - CLI manipulation and query of patch files, PRs, and more</li>
 </ul>
 
 <h1 id="more-information">More information</h1>
